--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,18 +24,6 @@ spring:
     multipart:
       max-file-size: 5MB
       max-request-size: 50MB
-  datasource:
-    name: druidDataSource
-    type: com.alibaba.druid.pool.DruidDataSource
-    druid:
-      driver-class-name: com.mysql.cj.jdbc.Driver
-      url: jdbc:mysql://localhost:3306/sharp-admin?useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2B8
-      username: root
-      password:
-      initialSize: 1
-      minIdle: 5
-      maxActive: 10
-      maxWait: 60000
   mail:  # SMTP 发邮件
     host: smtp.qiye.aliyun.com
     port: 25
@@ -60,28 +48,31 @@ logging:
 
 dict:
   items:
-    - type: user
-      sql: "select cast(id as char(20)) id, name from sys_user order by id asc"
+    - type: sys_user
+      sql: "select id, name from sys_user order by id asc"
     - type: sys_role
-      sql: "select cast(id as char(20)) id, name from sys_role order by id asc"
-    - type: dict-type
-      sql: "select type, type from sys_dict"
-    - type: grade
-      map: {g1: "一年级", g2: "二年级"}
+      sql: "select id, name from sys_role order by id asc"
+    - type: core_material_category
+      sql: "select 0 as id, '无' from core_material_category union all select id, name from core_material_category order by id asc"
+    - type: partner_type
+      map: { "CUSTOMER" : "客户", "VENDOR": "供应商" }
+    - type: core_partner
+      sql: "select id, name from core_partner order by id asc"
+    - type: core_plant
+      sql: "select id, name from core_plant order by id asc"
+    - type: sys_dict_type
+      sql: "select distinct type, type from sys_dict order by sort asc"
+    - type: unit
+      sql: "select name, label from sys_dict where type = 'UNIT' order by sort asc"
+    - type: material_type
+      sql: "select name, label from sys_dict where type = 'MATERIAL_TYPE' order by sort asc"
     - type: bol
       map: { "1" : "是", "0": "否" }
-    - type: status
-      map: {LOCKED: "锁定", NORMAL: "正常"}
-    - type: nativePlace #  有中文不能使用 map: { "江苏": "江苏", "四川": "四川", "陕西": "陕西", "上海": "上海" }
-      list:
-        - "江苏"
-        - "四川"
-        - "陕西"
-        - "上海"
+    - type: mm_material
+      sql: "select id, name from mm_material order by id asc"
 
 fileupload:
   tmp: /Users/rick/Space/tmp/fastdfs/tmp # 下载的临时目录
   local: # cd /Users/rick/Space/tmp/fileupload && http-server -p 7892
     root-path: /Users/rick/Space/tmp/fileupload
     server-url: http://localhost:7892/ # 映射到tmp目录
-
