--- a/.gitignore
+++ b/.gitignore
@@ -168,5 +168,6 @@ gradle-app.setting
 target
 ehcache
 rebel.xml
+application-dev.yml
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,jetbrains+iml,java,gradle
