chore: 添加sharp-database 省略 DAO 模版代码的支持

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -48,6 +48,10 @@ logging:
   file:
     path: /Users/rick/Space/tmp/admin/log
 
+sharp:
+  database:
+    entity-base-package: com.rick.admin.module.**.entity
+
 dict:
   items:
     - type: sys_user
