--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -59,7 +59,7 @@ dict:
     - type: sys_role
       sql: "select id, name from sys_role order by id asc"
     - type: core_material_category
-      sql: "select 0 as id, '无' from core_material_category union all select id, name from core_material_category order by id asc"
+      sql: "select 0 as id, '无' from dual union all select id, name from core_material_category order by id asc"
     - type: partner_type
       map: { "CUSTOMER": "客户", "VENDOR": "供应商" }
     - type: core_partner
