--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -66,6 +66,8 @@ dict:
       sql: "select id, name from core_partner WHERE is_deleted = 0 order by id asc"
     - type: core_partner_vendor
       sql: "select id, name from core_partner where partner_type = 'VENDOR' AND is_deleted = 0 order by id asc"
+    - type: core_partner_customer
+      sql: "select id, name from core_partner where partner_type = 'CUSTOMER' AND is_deleted = 0 order by id asc"
     - type: core_plant
       sql: "select id, name from core_plant where is_deleted = 0 order by id asc"
     - type: sys_dict_type
@@ -86,6 +88,8 @@ dict:
       map: { "OTHER": "无","MATERIAL_DOCUMENT": "物料凭证", "PO": "采购订单", "PDO": "生产单"}
     - type: produce_order_status
       map: { "PLANNING": "计划中","PROCESSING": "完成领料", "DONE": "生产完成"}
+    - type: purchase_order_status
+      map: { "PLANNING": "采购中", "DONE": "采购完成"}
 
 props:
   items: {"material_category_select_sql": "select id, name, (select name from core_material_category where c1.parent_id = id) parent_name from `core_material_category` c1 where id not in(719894871824945152, 719894910232186880, 719894937591631872, 719895017157578752)"}
