feat: 生产单集成销售信息

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -89,9 +89,9 @@ dict:
     - type: inv_type
       map: { "INBOUND": "入库", "OUTBOUND": "出库", "RETURN": "退货", "CANCEL":"取消", "COUNT": "盘点"}
     - type: reference_type
-      map: { "OTHER": "无","MATERIAL_DOCUMENT": "物料凭证", "PO": "采购订单", "PDO": "生产单"}
+      map: { "OTHER": "无","MATERIAL_DOCUMENT": "物料凭证", "PO": "采购订单", "PDO": "生产单领料", "SO": "生产单出货"}
     - type: produce_order_status
-      map: { "PLANNING": "计划中","PROCESSING": "完成领料", "DONE": "生产完成"}
+      map: { "PLANNING": "计划中","PROCESSING": "完成领料", "PRODUCED": "生产完成", "DONE": "订单完成"}
     - type: purchase_order_status
       map: { "PLANNING": "采购中", "DONE": "采购完成"}
 
