--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -89,9 +89,9 @@ dict:
     - type: movement_type
       map: { "INBOUND": "入库", "OUTBOUND": "出库" }
     - type: inv_type
-      map: { "INBOUND": "入库", "OUTBOUND": "出库", "RETURN": "退货", "CANCEL":"取消", "COUNT": "盘点"}
+      map: { "INBOUND": "收货", "OUTBOUND": "出货", "RETURN": "退货", "MOVING_TO_PRODUCE": "领料", "RETURN_FROM_PRODUCE": "退料", "CANCEL":"取消", "COUNT": "盘点"}
     - type: reference_type
-      map: { "OTHER": "无","MATERIAL_DOCUMENT": "物料凭证", "PO": "采购订单", "PDO": "生产单领料", "SO": "生产单出货"}
+      map: { "OTHER": "无","MATERIAL_DOCUMENT": "物料凭证", "PO": "采购订单", "PDO": "生产单", "SO": "生产单"}
     - type: produce_order_status
       map: { "PLANNING": "计划中","PROCESSING": "完成领料", "PRODUCED": "生产完成", "DONE": "订单完成"}
     - type: purchase_order_status
