--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,8 @@
 server:
   port: 8080
+  servlet:
+    session:
+      timeout: 480m
 spring:
   profiles:
     active: dev
@@ -77,7 +80,7 @@ dict:
     - type: material_type
       sql: "select name, label from sys_dict where type = 'MATERIAL_TYPE' order by sort asc"
     - type: bom_material
-      sql: "select id name, name label from mm_material where bom_template_id is NOT NULL"
+      sql: "select id name, name label from mm_material where bom_template_id is NOT NULL AND material_type = 'FERT'"
     - type: material_bom
       sql: "select id name, concat(code, '-' ,description) label from produce_bom_template"
     - type: core_classification
