--- a/.gitignore
+++ b/.gitignore
@@ -169,5 +169,6 @@ target
 ehcache
 rebel.xml
 application-dev.yml
+application-prod.yml
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,jetbrains+iml,java,gradle
