--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 
   <properties>
     <thymeleaf-extras-springsecurity5-version>3.0.4.RELEASE</thymeleaf-extras-springsecurity5-version>
+    <sharp.version>2.0-SNAPSHOT</sharp.version>
   </properties>
 
   <dependencies>
@@ -64,37 +65,37 @@
     <dependency>
       <groupId>com.rick.meta</groupId>
       <artifactId>sharp-meta</artifactId>
-      <version>2.0-SNAPSHOT</version>
+      <version>${sharp.version}</version>
     </dependency>
     <dependency>
       <groupId>com.rick.db</groupId>
       <artifactId>sharp-database</artifactId>
-      <version>2.0-SNAPSHOT</version>
+      <version>${sharp.version}</version>
     </dependency>
     <dependency>
       <groupId>com.rick.excel</groupId>
       <artifactId>sharp-excel</artifactId>
-      <version>2.0-SNAPSHOT</version>
+      <version>${sharp.version}</version>
     </dependency>
     <dependency>
       <groupId>com.rick.fileupload</groupId>
       <artifactId>sharp-fileupload</artifactId>
-      <version>2.0-SNAPSHOT</version>
+      <version>${sharp.version}</version>
     </dependency>
     <dependency>
       <groupId>com.rick.formflow</groupId>
       <artifactId>sharp-formflow</artifactId>
-      <version>2.0-SNAPSHOT</version>
+      <version>${sharp.version}</version>
     </dependency>
     <dependency>
       <groupId>com.rick.report</groupId>
       <artifactId>sharp-report</artifactId>
-      <version>2.0-SNAPSHOT</version>
+      <version>${sharp.version}</version>
     </dependency>
     <dependency>
       <groupId>com.rick.mail</groupId>
       <artifactId>sharp-mail</artifactId>
-      <version>2.0-SNAPSHOT</version>
+      <version>${sharp.version}</version>
     </dependency>
     <!-- sharp-component end -->
     <dependency>
